objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Lead Process Test</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>ACTION_CADENCE</columns>
        <columns>ACTION_CADENCE_ASSIGNEE</columns>
        <columns>ACTION_CADENCE_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>ACTION_CADENCE</columns>
        <columns>ACTION_CADENCE_ASSIGNEE</columns>
        <columns>ACTION_CADENCE_STATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>